<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.glueckkanja.geofencing.Overview$PlaceholderFragment" >

    <TextView
        android:id="@+id/tv_bluetoothState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:hint="@string/bluetoothState_hint" />

    <TextView
        android:id="@+id/tv_macAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/hint_MACAddress" />

    <Button
        android:id="@+id/b_beacons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/b_bluetooth"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:onClick="oc_Beacons"
        android:text="@string/button_toBeaconList" />

    <EditText
        android:id="@+id/e_URL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_bluetoothState"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/hint_IpAddress"
        android:maxHeight="100dp"
        android:minHeight="50dp"
        android:minWidth="300dp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/b_ServiceON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/e_URL"
        android:layout_below="@+id/e_URL"
        android:layout_marginTop="24dp"
        android:minWidth="130dp"
        android:onClick="oc_serviceON"
        android:text="@string/button_serviceON"
        android:width="130dp" />

    <Button
        android:id="@+id/bServiceOFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/b_ServiceON"
        android:layout_alignBottom="@+id/b_ServiceON"
        android:layout_alignRight="@+id/e_URL"
        android:minWidth="130dp"
        android:onClick="oc_serviceOFF"
        android:text="@string/button_serviceOFF"
        android:width="130dp" />

    <Button
        android:id="@+id/b_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:onClick="oc_bluetooth"
        android:text="@string/button_startBluetooth" />

</RelativeLayout>
